--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "framer-motion": "^1.7.0",
     "next": "^9.1.7",
     "next-images": "^1.3.0",
     "next-transpile-modules": "^2.3.1",
